sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: value =! is not a member of Int
    while (k=!nb){
            ^