sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var nb=getNombreValeurs()
  var k=0
  for (i<-0 to nb){
    k=0
    while (k=!nb){
      if (plusPetit(k,i)){
        echange(i,k)
        k=i
      }
    }
  }
}